--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,21 @@ a {
 .section {
 	padding: 40px;
 }
+.section h3 {
+	margin: 0;
+}
+
+.section h1{
+	margin-top: 0;
+
+}
+
+.section p {
+	margin-top: 10px;
+	color: #6f6f6f;
+	font-size: 14px;
+}
+
+#identitas {
+	width: 50%
+}
