--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ a {
 	padding: 40px;
 }
 .section h3 {
+	padding-top: 120px;
 	margin: 0;
 }
 
@@ -82,7 +83,7 @@ a {
 
 
 #gamabaridentitas {
-	margin-top: 20px;
+	margin-top: 10%;
 	width: 50%;
 	
 }
@@ -117,6 +118,8 @@ a {
 
 .judul-tengah h2{
 	text-align: center;
+	margin-top: 12%;
+	text-transform: uppercase;
 }
 
 .footer {
@@ -131,4 +134,39 @@ a {
 	text-align: center;
 	top: 0;
 	margin: 0;
+}
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  margin: 80px;
+  margin-top: 8%;
+  
+
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
+
+#keahlian {
+	display: flex;
+}
+
+#skill1 {
+	width: 33%;
+
+#skill2 {
+	width: 33%;
+}
+
+#skill3 {
+	width: 33%;
 }
