--- a/css/style.css
+++ b/css/style.css
@@ -83,32 +83,33 @@ a {
 
 
 #gamabaridentitas {
-	margin-top: 10%;
+	margin-top: 5%;
+	margin-right: 5%;
 	width: 50%;
 	
 }
 #gamabaridentitas img {
 	border-radius: 20px;
-	width: 80%;
-	height: 80%;
+	width: 100%;
+	height: 100%;
 	margin-left: 48px;
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	
 }
 
 .call-me {
 	padding: 12px 32px;
 	background-color: #fff;
-	color: #ff7b51;
+	color: #516e9c;
 	margin-top: 16px;
 	border-radius: 32px;
-	border : 1px solid #ff7b51;
+	border : 1px solid #516e9c;
 
 	transition: 0.3s;
 }
 
 .call-me:hover {
 	box-shadow: 0px 10px 20px #ddd;
-	background-color: #ff7b51;
+	background-color: #516e9c;
 	color: white;
 	transition: 0.3s;
 }
@@ -187,4 +188,54 @@ a {
 
 #skill3 {
 	width: 33%;
+}
+
+
+
+#coding {
+	margin-top: 5%;
+	margin-right: 5%;
+	width: 50%;	
+}
+
+#coding img { 
+	width: 100%;
+}
+
+
+#code {
+	width: 50%;
+}
+
+
+#code p h1{
+	margin-top: 260px;
+	color: #6f6f6f;
+	font-size: 14px;
+	margin-left: 10%;
+}
+
+
+
+#coding {
+	margin-top: 5%;
+	margin-right: 0px;
+	width: 30%;	
+}
+
+#coding img { 
+	width: 100%;
+}
+
+
+#code {
+	width: 70%;
+}
+
+
+#code p h1{
+	margin-top: 260px;
+	color: #6f6f6f;
+	font-size: 14px;
+	margin-left: 10%;
 }
