--- a/css/style.css
+++ b/css/style.css
@@ -133,9 +133,12 @@ a {
 }
 
 .footer p {
-	text-align: center;
+	text-align: left;
 	top: 0;
 	margin: 0;
+	margin-left: 12px;
+	color: #516e9c;
+	font-size: 12px;
 }
 
 
@@ -217,25 +220,26 @@ a {
 
 
 
-#coding {
+#joys {
 	margin-top: 5%;
 	margin-right: 0px;
 	width: 30%;	
 }
 
-#coding img { 
+#joys img { 
 	width: 100%;
 }
 
 
-#code {
+#joystik {
 	width: 70%;
 }
 
 
-#code p h1{
+#joystik p h1{
 	margin-top: 260px;
 	color: #6f6f6f;
 	font-size: 14px;
 	margin-left: 10%;
+
 }
